# sei-automacao

./: .gitignore  pyproject.toml
sei_automacao/: __init__.py
sei_automacao/auth/: __init__.py  login.py  unidade.py
sei_automacao/core/: buttons.py  iframes.py  popups.py  windows.py
sei_automacao/documento/: __init__.py  gestao.py
sei_automacao/navigation/: __init__.py  menu.py
sei_automacao/processo/: __init__.py  documentos.py  email.py  encaminhamento.py  marcadores.py  metadados.py
sei_automacao/ubiquo/: __init__.py  busca.py
sei_automacao/utils/: acesso.py  numeros.py
src/sei_automacao/acoes_completas/: documento.py  processo.py  ubiquo.py
src/sei_automacao/documento/: cancelar_doc.py  excluir_doc.py  inserir_bloco_ass.py
src/sei_automacao/driver/: iniciar_driver.py
src/sei_automacao/extras/: numeros.py
src/sei_automacao/genericos/: botoes.py  janelas.py  popup.py
src/sei_automacao/inicio/: efetuar_login.py  selecionar_unidade.py
src/sei_automacao/menu/: abrir_menu.py  iniciar_processo.py
src/sei_automacao/processo/: adicionar_marcador.py  alterar_metadados.py  capturar_num_processo.py  clicar_num_processo.py  concluir_processo.py  encaminhar_processo.py  enviar_email.py  incluir_doc.py  selecionar_processo_arvore.py
src/sei_automacao/ubiquo/: acessar_processo.py  trocar_unidade.py
src/sei_automacao/utils/: selecionar_nivel_acesso.py  trocar_iframe.py
