[project]
name = "sei-automacao"
version = "0.1.0"
description = ""
authors = [
    { name = "Gustavo Amaral Bernardino", email = "gu.amaralb@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "selenium (>=4.38.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "num2words (>=0.5.14,<0.6.0)"
]

[tool.poetry]
packages = [
    { include = "sei_automacao", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
